# SpinnakerCamera

./: .gitignore  CMakeLists.txt
cmake/: FindSpinnaker.cmake
src/: CMakeLists.txt  SpinnakerCamera.cpp  SpinnakerCamera.h  main.cpp
